[project]
name = "mmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "dataframe-image>=0.2.7",
]
